force-app/main/default/objects/Opportunity/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <description>This is a field that gets set automatically every time the “Opportunity Accepted” field is changed to “yes” and can only be reset by Ops.</description>
    <inlineHelpText>This field shows the Date &quot;Opportunity Accepted”</inlineHelpText>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>