force-app/main/default/objects/Opportunity/fields/Additional_Closing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Closing_Notes__c</fullName>
    <label>Additional Closing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>