force-app/main/default/objects/Opportunity/fields/Advance_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Advance_Accepted__c</fullName>
    <label>Advance Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>