force-app/main/default/objects/Opportunity/fields/Advance_Date__c.field-meta.xml
<CustomField>
    <fullName>Advance_Date__c</fullName>
    <label>Advance Date</label>
    <type>Date</type>
</CustomField>