force-app/main/default/objects/Opportunity/fields/Advancement_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Confidence__c</fullName>
    <label>Advancement Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>