force-app/main/default/objects/Opportunity/fields/Advancement_Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Forecast_Date__c</fullName>
    <label>Advancement Forecast Date</label>
    <type>Date</type>
</CustomField>