force-app/main/default/objects/Opportunity/fields/Annex_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Annex_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We use this field to prevent duplicate emails. Workflow evaluation criteria&quot;Evaluate the rule when a record is created, and any time it&apos;s edited to subsequently meet criteria&quot; does not work for &quot;Request OSA&quot; field.
Related to Ticket# 31384</description>
    <label>Annex/Cloud email sent</label>
    <type>Checkbox</type>
</CustomField>