force-app/main/default/objects/Opportunity/fields/Ant_Can_Sent__c.field-meta.xml
<CustomField>
    <fullName>Ant_Can_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ant Can Sent?</label>
    <type>Checkbox</type>
</CustomField>