force-app/main/default/objects/Opportunity/fields/Appliance_2__c.field-meta.xml
<CustomField>
    <fullName>Appliance_2__c</fullName>
    <label>Appliance Model #2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3/110c</fullName>
            </value>
            <value>
                <fullName>3/110d</fullName>
            </value>
            <value>
                <fullName>3/110m</fullName>
            </value>
            <value>
                <fullName>3/230c</fullName>
            </value>
            <value>
                <fullName>3/440c</fullName>
            </value>
            <value>
                <fullName>3/110</fullName>
            </value>
            <value>
                <fullName>3/230</fullName>
            </value>
            <value>
                <fullName>3/440</fullName>
            </value>
            <value>
                <fullName>2 read/2 write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>