force-app/main/default/objects/Opportunity/fields/Appliance_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Ship_Date__c</fullName>
    <description>Date the Tsunami Appliance was deposited at FedEx</description>
    <label>Actual Ship Date</label>
    <type>Date</type>
</CustomField>