force-app/main/default/objects/Opportunity/fields/Approval_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Date__c</fullName>
    <description>To capture Date &amp; Time to track time when the approval process was initiated</description>
    <inlineHelpText>To capture Date &amp; Time to track time when the approval process was initiated</inlineHelpText>
    <label>Quote Approval Request Date</label>
    <type>DateTime</type>
</CustomField>