force-app/main/default/objects/Opportunity/fields/Approved_Legacy_Services_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Approved_Legacy_Services_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if legacy services pricing has been approved.

Part of Technical Debt Project: Week 9 fields (Expiring June 8)</description>
    <label>Services Subsidy (Expiring June 8)</label>
    <type>Checkbox</type>
</CustomField>