force-app/main/default/objects/Opportunity/fields/Approved_to_Exit_Evaluation_of_Optio__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Exit_Evaluation_of_Optio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved to Exit Evaluation of Options</label>
    <type>Checkbox</type>
</CustomField>