force-app/main/default/objects/Opportunity/fields/Approved_to_Exit_Management_Approval__c.field-meta.xml
<CustomField>
    <fullName>Approved_to_Exit_Management_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of Technical Debt Project: Week 7 fields (Expiring May 25)</description>
    <label>Approved to Exit Mgmt App(Exp May 25)</label>
    <type>Checkbox</type>
</CustomField>