force-app/main/default/objects/Opportunity/fields/APS_Team_Opportunitiy__c.field-meta.xml
<CustomField>
    <fullName>APS_Team_Opportunitiy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the opportunity originally created by the APS team?</description>
    <inlineHelpText>Was the opportunity originally created by the APS team?</inlineHelpText>
    <label>APS Team Opportunitiy</label>
    <type>Checkbox</type>
</CustomField>