force-app/main/default/objects/Opportunity/fields/At_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Category__c</fullName>
    <description>Select the reason(s) this renewal opportunity is being placed on the At Risk list.

Part of Technical Debt Project: Week 7 fields (Expiring May 25)</description>
    <label>At Risk Category (Exp May 25)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>At_Risk__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Old Version</fullName>
            </value>
            <value>
                <fullName>Receivables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>