force-app/main/default/objects/Opportunity/fields/Budget_Funding_Approved__c.field-meta.xml
<CustomField>
    <fullName>Budget_Funding_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deal data point question</description>
    <label>Budget/Funding Approved</label>
    <type>Checkbox</type>
</CustomField>