force-app/main/default/objects/Opportunity/fields/Business_Case_Attached_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Attached_to_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Case Attached to Opportunity</label>
    <type>Checkbox</type>
</CustomField>