force-app/main/default/objects/Opportunity/fields/Business_Case_Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Delivered_On__c</fullName>
    <label>Business Case Delivered On</label>
    <type>Date</type>
</CustomField>