force-app/main/default/objects/Opportunity/fields/Business_Case_Development_Notes__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Development_Notes__c</fullName>
    <label>Business Case Development Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>