force-app/main/default/objects/Opportunity/fields/Business_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Business_Reason_Notes__c</fullName>
    <description>Details of the prospect&apos;s business reasons for purchasing</description>
    <inlineHelpText>Details of the prospect&apos;s business reasons for purchasing this category of software. Use this field to capture the details of the conversation.</inlineHelpText>
    <label>Business reason details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>