force-app/main/default/objects/Opportunity/fields/Campaign_Influence_list__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Influence_list__c</fullName>
    <label>Campaign Influence list</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>