force-app/main/default/objects/Opportunity/fields/Champion_lookup__c.field-meta.xml
<CustomField>
    <fullName>Champion_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Champion</relationshipName>
    <type>Lookup</type>
</CustomField>