force-app/main/default/objects/Opportunity/fields/Champion_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Champion_Picklist__c</fullName>
    <description>This is the person who has personal and professional wins, aligned with us (and only us) winning. They are willing to take personal risks to help you win, and will actively promote your solution when you&apos;re not in the account.</description>
    <label>Champion Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>