force-app/main/default/objects/Opportunity/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Software Delivery Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Client Contact)</relationshipLabel>
    <relationshipName>ClientContact</relationshipName>
    <type>Lookup</type>
</CustomField>