force-app/main/default/objects/Opportunity/fields/Client_Services_Amount_Total__c.field-meta.xml
<CustomField>
    <fullName>Client_Services_Amount_Total__c</fullName>
    <formula>IF(
Services_List__c &lt;= 0, 0,
 Services_List__c + Services_Discount_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Services Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>