force-app/main/default/objects/Opportunity/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <formula>IF(CloseDate &gt; DATEVALUE(LastModifiedDate), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last_Date_Greater_Than_Closed_Date</label>
    <type>Checkbox</type>
</CustomField>