force-app/main/default/objects/Opportunity/fields/Closing_Plan_milestones__c.field-meta.xml
<CustomField>
    <fullName>Closing_Plan_milestones__c</fullName>
    <description>What are the dates and milestones for your closing plan?</description>
    <inlineHelpText>What are the dates and milestones for your closing plan?</inlineHelpText>
    <label>Closing Plan milestones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>