force-app/main/default/objects/Opportunity/fields/Cloud_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Strategy__c</fullName>
    <description>Why or why not cloud? If Cloud, have we worked the checklist with SecOps?</description>
    <inlineHelpText>Why or why not cloud? If Cloud, have we worked the checklist with SecOps?</inlineHelpText>
    <label>Cloud Strategy(+SecOps)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>