force-app/main/default/objects/Opportunity/fields/CM_Contingency_Tracking_Start__c.field-meta.xml
<CustomField>
    <fullName>CM_Contingency_Tracking_Start__c</fullName>
    <description>This date is a static start for any type of contingency.

Part of Technical Debt Project: Week 9 fields (Expiring June 8)</description>
    <label>Contingency Tracking Start (Exp June 8)</label>
    <type>Date</type>
</CustomField>