force-app/main/default/objects/Opportunity/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the Contact within the account who is coaching you on how to win the deal? Who wants you to win?</description>
    <inlineHelpText>Who is the Contact within the account who is coaching you on how to win the deal? Who wants you to win?</inlineHelpText>
    <label>Coach</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>