force-app/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>This is the main vendor we are opposing. Our strategy should take into account the competitor’s strengths and weaknesses. We should never disparage them, but should highlight key value differentiators.</description>
    <label>Competition Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>