force-app/main/default/objects/Opportunity/fields/Competitor_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Confirmed</label>
    <type>Checkbox</type>
</CustomField>