force-app/main/default/objects/Opportunity/fields/Completeness_Score_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Score_Evaluation__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Delivered_Proposal__c)),
  0,
  1
)/1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completeness Score: Evaluation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>