force-app/main/default/objects/Opportunity/fields/Contingency_Status__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Status__c</fullName>
    <label>Contingency Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed Won</fullName>
                <color>#78C953</color>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <color>#A53711</color>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Closed Superseded</fullName>
                <color>#BBBBBB</color>
                <label>Closed Superseded</label>
            </value>
            <value>
                <fullName>In Process</fullName>
                <color>#641CCF</color>
                <label>In Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>