force-app/main/default/objects/Opportunity/fields/Contract_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Contract_Addendum__c</fullName>
    <description>Does this deal require a New Contract to be negotiated and signed, or can it be signed as an addendum to an existing contract?</description>
    <inlineHelpText>Does this deal require a New Contract to be negotiated and signed, or can it be signed as an addendum to an existing contract?</inlineHelpText>
    <label>Contract/Addendum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order only - no terms changes (for customers)</fullName>
            </value>
            <value>
                <fullName>Amendment - no lawyer involved (for customers)</fullName>
            </value>
            <value>
                <fullName>Amendment - lawyer involved (for customers)</fullName>
            </value>
            <value>
                <fullName>Contract - without procurement (for prospects)</fullName>
            </value>
            <value>
                <fullName>Contract - with procurement (for prospects)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>