force-app/main/default/objects/Opportunity/fields/Contract_RAR__c.field-meta.xml
<CustomField>
    <fullName>Contract_RAR__c</fullName>
    <description>This field brings the contract  value of the field recurring adjustment renewal</description>
    <formula>Associated_Contract_OSA__r.Recurring_Adjustment_Renewal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field brings the contract  value of the field recurring adjustment renewal</inlineHelpText>
    <label>Contract Recurring Adjustment Renewal</label>
    <type>Checkbox</type>
</CustomField>