force-app/main/default/objects/Opportunity/fields/Contract_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Notes__c</fullName>
    <label>Contract Request Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>